--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="">
+    <meta property="og:image" content="https://gemskyworld.vn/Data/Sites/1/skins/default/img/logo.png">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -220,7 +224,7 @@
                 </ul>
             </div>
             <div id="scrollspyHeading1" class="slider">
-                <img class="slider__img" src="images/silder.png" alt="">
+                <img class="slider__img" src="images/slider.png" alt="">
                 <div class="slider__posite-img">
                     <img src="images/07.png" alt="">
                 </div>
@@ -633,7 +637,7 @@
         });
     })
     $(document).ready(function () {
-        setTimeout(popup, 1500);
+        setTimeout(popup, 15000);
         function popup() {
             $(".logindiv").addClass('Form__blocks');
         }
