update (Gem Sky World)

--- a/index.html
+++ b/index.html
@@ -97,6 +97,176 @@
                 </div>
             </div>
         </div>
+        <div class="powup__none powup__ss powup__img section__title ">
+            <div class="powup__close">
+                <i class="uil uil-times"></i>
+            </div>
+            <h1>Khám phá quần thể giải trí Gem Sky Park</h1>
+            <img src="images/infographic1.jpeg" alt="">
+            <h1>Sân chơi Gem Sky Park</h1>
+            <img src="images/infographic.jpeg" alt="">
+        </div>
+        <div class=" button__homeup button__homeupss">
+            <div class="powup__close-utilities">
+                <i class="uil uil-times"></i>
+            </div>
+            <h1>TIỆN ÍCH PHONG PHÚ
+                TRẢI NGHIỆM MUÔN MÀU</h1>
+            <p class="powup__close-desc container">Điểm nhấn đặc biệt của Gem Sky World là công viên trung tâm và 6 công
+                viên nội
+                khu rải khắp khu đô thị,
+                trong đó nổi bật là quần thể giải trí rộng 3ha - Sky Park. Đây là khu giải trí - vận động ngoài trời và
+                trong nhà đa chức năng bao gồm quảng trường, vòng đu quay, khu trò chơi Aventure Forest, khu leo núi, mê
+                cung… đầy thử thách và kỳ thú. </p>
+            <img src="images/so-do-cong-vien_1.jpeg" alt="">
+            <ul>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>01</span></div>
+                        <p>Đài phun nước</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>02</span></div>
+                        <p>Khu thể thao ngoài trời</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>03</span></div>
+                        <p>Quảng trường sự kiện</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>04</span></div>
+                        <p>Sân khẩu ngoài trời</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>05</span></div>
+                        <p>Vườn thư giản</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>06</span></div>
+                        <p>Sân thể thao đa năng</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>07</span></div>
+                        <p>Vườn nhiệt đới</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>08</span></div>
+                        <p>Khu đồi cỏ</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>01</span></div>
+                        <p>Đài quan sát</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>09</span></div>
+                        <p>
+                            Chòi nghỉ</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>10</span></div>
+                        <p>Khu trượt Patin</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>11</span></div>
+                        <p>Khu leo núi ngoài trời</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>11</span></div>
+                        <p>Khu vui chơi trẻ em</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>12</span></div>
+                        <p>Khu vui chơi trẻ em trên cát</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>13</span></div>
+                        <p>Cafe ngoài trời</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>14</span></div>
+                        <p>Khu vui chơi trẻ em trên cát</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>15</span></div>
+                        <p>Máy bay hoa</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>16</span></div>
+                        <p>Vườn mê cung</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>17</span></div>
+                        <p>Khu trò chơi thám hiểm</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>18</span></div>
+                        <p>Đường chạy bộ</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>0E</span></div>
+                        <p>Lối vào chính</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>0S</span></div>
+                        <p>Lối vào phụ</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>0P</span></div>
+                        <p>Bãi đỗ xe</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="items">
+                        <div class="number"><span>0D</span></div>
+                        <p>Khu đón trả khách</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <div>
             <div class="header" id="sec1">
                 <div class="container">
@@ -115,7 +285,7 @@
                                                 <div class="hotline__icon"><img src="icon/outgoing-call.svg" alt="">
                                                 </div>
                                                 <div class="hotline__title"><span><a
-                                                            href="tel:+0932657979">0932657979</a></span></div>
+                                                            href="tel:0932657979">0932657979</a></span></div>
                                             </div>
                                             <!-- <div class="right__img">
                                                 <a href="#"><img
@@ -192,7 +362,7 @@
                             </div>
                             <div class="hotline__wrapper uk__flex">
                                 <div class="hotline__icon"><img src="icon/outgoing-call.svg" alt=""></div>
-                                <div class="hotline__title"><span><a href="tel:+0932657979">0932657979</a></span></div>
+                                <div class="hotline__title"><span><a href="tel:0932657979">0932657979</a></span></div>
                             </div>
                             <!-- <div class="right__img">
                                 <a href="#"><img
@@ -215,7 +385,7 @@
                     <a href="https://www.facebook.com/alphaland.com.vn">
                         <li><img width="20px" src="icon/facebook-f.svg" alt=""></li>
                     </a>
-                    <a href="tel:+0932657979">
+                    <a href="tel:0932657979">
                         <li><img width="20px" src="icon/phone.svg" alt=""></li>
                     </a>
                     <a href="#">
@@ -287,11 +457,11 @@
                                 đón
                                 ánh mặt trời phản quang rực rỡ vào ban ngày và ánh đèn lấp lánh khi màn đêm buông xuống.
                             </p>
-                            <a href="#">Xem Thêm</a>
+                            <button class="button__home button__homes">Xem Thêm</button>
                         </div>
                     </div>
                     <div class="aos__img animate " data-aos-anchor-placement="bottom-bottom">
-                        <img src="https://gemskyworld.vn/Data/Sites/1/media/img/trang-chu/29.jpg" alt="">
+                        <img src="images/29.jpg" alt="">
                     </div>
                     <div id="scrollspyHeading2" class="uk__flex section__row animate "
                         data-aos-anchor-placement="bottom-bottom">
@@ -384,7 +554,7 @@
                     </div>
                 </div>
                 <div class="aos__img">
-                    <img src="https://gemskyworld.vn/Data/Sites/1/media/cac-cong-vien-gem-sky-world-2.jpg" alt="">
+                    <img src="images/cac-cong-vien-gem-sky-word.jpg" alt="">
                 </div>
                 <div id="scrollspyHeading3" class="container">
                     <div class="text__center" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
@@ -394,7 +564,7 @@
                     </div>
                     <div class="uk__flex uk__block">
                         <div class="gg__img" data-aos="zoom-in-down">
-                            <img src="https://gemskyworld.vn/Data/Sites/1/media/vi-tri-gem-sky-world.jpg" alt="">
+                            <img src="images/vi-tri-gem-sky-world-1.jpg" alt="">
                         </div>
                         <div class="item" data-aos="zoom-in-down">
                             <div class="uk__flex ">
@@ -454,11 +624,11 @@
                             <h2>TIỆN ÍCH PHONG PHÚ,</h2>
                             <h2>TRẢI NGHIỆM MUÔN MÀU</h2>
                         </div>
-                        <button class="button__home">Khám Phá Thêm</button>
+                        <button class="button__home  button__home__utilities">Khám Phá Thêm</button>
                     </div>
                 </div>
                 <div id="scrollspyHeading4" class="aos__img">
-                    <img src="https://gemskyworld.vn/Data/Sites/1/media/location-done.jpg" alt="">
+                    <img src="images/location-done.jpg" alt="">
                 </div>
                 <div id="scrollspyHeading5" class="product">
                     <div class="container">
@@ -476,7 +646,9 @@
                                         <img src="https://gemskyworld.vn/Data/Sites/1/media/san-pham/shophouse-gem-sky-world.jpg"
                                             alt="sample95" />
 
-                                        <i class="uil uil-map-marker"></i>
+                                        <i class="uil uil-images">
+                                            <p>Xem thêm ...</p>
+                                        </i>
                                         <div class="product__desc">
                                             <h3>Nhà Phố</h3>
                                             <p>Bình Yên Và Năng động</p>
@@ -489,7 +661,9 @@
                                         class="snip1409">
                                         <img src="https://gemskyworld.vn/Data/Sites/1/media/san-pham/nha-pho-thuong-mai-2.jpg"
                                             alt="sample95" />
-                                        <i class="uil uil-map-marker"></i>
+                                        <i class="uil uil-images">
+                                            <p>Xem thêm ...</p>
+                                        </i>
                                         <div class="product__desc">
                                             <h3>Nhà Phố Thương mại</h3>
                                             <p>Hưng Thịnh và sung túc</p>
@@ -504,9 +678,11 @@
                                         class="snip1409">
                                         <img src="https://gemskyworld.vn/Data/Sites/1/media/san-pham/nha-pho-thuong-mai-2.jpg"
                                             alt="sample95" />
-                                        <i class="uil uil-map-marker"></i>
+                                        <i class="uil uil-images">
+                                            <p>Xem thêm ...</p>
+                                        </i>
                                         <div class="product__desc">
-                                            <h3>Biệt Thự THương Mại Đơn Lập</h3>
+                                            <h3>Biệt Thự Thương Mại Đơn Lập</h3>
                                             <p>Đẳng Cấp Và Quý Phái</p>
                                         </div>
                                     </div>
@@ -517,7 +693,9 @@
                                         class="snip1409">
                                         <img src="https://gemskyworld.vn/Data/Sites/1/media/san-pham/biet-thu-thuong-mai-song-lap-2.jpg"
                                             alt="sample95" />
-                                        <i class="uil uil-map-marker"></i>
+                                        <i class="uil uil-images">
+                                            <p>Xem thêm ...</p>
+                                        </i>
                                         <div class="product__desc">
                                             <h3>Biệt Thự THương Mại Song lập</h3>
                                             <p>Tinh Tế Và Sang Trọng</p>
@@ -578,7 +756,7 @@
                                     <ul>
                                         <li>
                                             <span><img width="20px" src="icon/phone.svg" alt=""> Hotline |</span><a
-                                                href="tel:+0932657979">
+                                                href="tel:0932657979">
                                                 0932657979
                                             </a>
                                         </li>
@@ -589,7 +767,7 @@
                                         </li>
                                         <li>
                                             <span><img width="20px" src="icon/phone.svg" alt=""> ĐK phân phối |</span><a
-                                                href="tel:+0932657979">
+                                                href="tel:0932657979">
                                                 0932657979</a>
                                         </li>
                                     </ul>
@@ -637,10 +815,26 @@
         });
     })
     $(document).ready(function () {
-        setTimeout(popup, 15000);
+        setTimeout(popup, 15222000);
         function popup() {
             $(".logindiv").addClass('Form__blocks');
         }
+        $(".button__homes").click(function () {
+            $('div').find('.powup__none').addClass('powup__img')
+            $('div').find('.powup__ss').removeClass('powup__none')
+        })
+        $(".button__home__utilities").click(function () {
+            $('div').find('.button__homeupss').addClass('powup__utilities')
+            $('div').find('.button__homeupss').removeClass('button__homeup')
+        })
+        $(".powup__close-utilities").click(function () {
+            $('div').find('.button__homeupss').removeClass('powup__utilities')
+            $('div').find('.button__homeupss').addClass('button__homeup')
+        })
+        $(".powup__close").click(function () {
+            $('div').find('.powup__ss').removeClass('powup__img')
+            $('div').find('.powup__ss').addClass('powup__none')
+        })
         $(".right__buttons").click(function () {
             $('div').find('.slider__row-flex').addClass('slider__row-posites')
             $('div').find('.slider__row-colors').addClass('slider__row-color')
